# cookiebox

./: Cargo.toml  README.md
.github/workflows/: ci.yml
example/: Cargo.toml
examples/: cookiebox.rs
macros/: Cargo.toml  LICENSE-MIT
macros/src/: lib.rs
src/: attributes.rs  cookies.rs  lib.rs  main.rs  middleware.rs  storage.rs
tests/: cookies.rs  middleware.rs
