[package]
name = "cookiebox"
version = "0.2.1"
edition = "2021"
authors = ["Mohammed (Zack) Salah <msalahcs73@gmail.com>"]
description = "A type safe cookie management crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MSalah73/cookiebox"

[workspace]
members = ["macros",] 

[dependencies]
cookiebox-macros = { version = "0.2.0", path = "macros"}
biscotti = "0.3.4"
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }
anyhow = "1.0.93"
thiserror = "2.0.3"
actix-web = "4.9"
actix-utils = "3.0.1"