[package]
name = "cookiebox-macros"
version = "0.2.0"
edition = "2021"
authors = ["Mohammed (Zack) Salah <msalahcs73@gmail.com>"]
description = "macro Implementation for cookiebox crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MSalah73/cookiebox"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.87", features = ["full"] }